--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "pl/phelma",
+    "name": "pl/edt",
     "description": "parse l'edt",
     "require": {
         "johngrogg/ics-parser": "^2.1",
@@ -8,7 +8,7 @@
     "authors": [
         {
             "name": "pl",
-            "email": "52932209+plharraud@users.noreply.github.com"
+            "email": "plharraud@gmail.com"
         }
     ]
 }
